# navXTimeSync

./: .gitignore  BUILD  CMakeLists.txt  README.md
NavXTimeStamp/: main.cpp
include/: IMUProtocol.h  SerialIO.h  SerialPort.h
src/: SerialPort.cpp
